--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "backend": "nodemon src/app/api/route.js"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
+    "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
@@ -21,6 +23,9 @@
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
+    "redux": "^5.0.1",
     "validator": "^13.15.0"
   },
   "devDependencies": {
