--- a/package.json
+++ b/package.json
@@ -15,17 +15,22 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "firebase": "^11.6.0",
+    "firebase-admin": "^13.3.0",
     "framer-motion": "^12.7.4",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.487.0",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
     "next": "15.2.1",
+    "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
+    "react-tsparticles": "^2.12.2",
     "redux": "^5.0.1",
+    "tsparticles": "^3.8.1",
     "validator": "^13.15.0"
   },
   "devDependencies": {
