--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "lucide-react": "^0.487.0",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
-    "next": "15.2.1",
+    "next": "^16.1.1",
     "nodemailer": "^6.10.1",
     "razorpay": "^2.9.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
